# Xtalate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_incorrect_conversion.yml  bug_parse_failure.yml  config.yml  format_request.yml  general.yml
.github/workflows/: ci.yml  main.yml  nightly.yml
backend/: __init__.py  __main__.py  app.py  asgi.py  config.py  deps.py  errors.py  models.py  openapi.py  readiness.py  records.py  security.py  worker.py
backend/db/: __init__.py  base.py  engine.py  models.py  repository.py
backend/db/migrations/: env.py
backend/jobs/: __init__.py  envelope.py  expiry.py  feedback.py  logging.py  queue.py  recovery.py  result.py  retention.py  revalidate.py  runner.py  state_machine.py
backend/routers/: __init__.py  accounts.py  capabilities.py  conversions.py  downloads.py  health.py  jobs.py  limits.py  uploads.py
backend/storage/: __init__.py  filesystem.py  objects.py  s3.py
benchmarks/: __init__.py  __main__.py  harness.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DECISIONS.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v0.1.md  IMPLEMENTATION_PLAN_v0.2.md  IMPLEMENTATION_PLAN_v0.3.md  IMPLEMENTATION_PLAN_v0.4.md  IMPLEMENTATION_PLAN_v0.5.md  IMPLEMENTATION_PLAN_v0.6.md  IMPLEMENTATION_PLAN_v0.7.md  IMPLEMENTATION_PLAN_v1.0.md  Incremental_Roadmap.md  Incremental_Roadmap_v1.0.md  M14-M16_SLICE_PLAN.md  MASTER_SPEC.md  MEMORY_CEILING.md  openapi.json
examples/: convert_extxyz_to_poscar.py
src/chembridge/: __init__.py  registry.py
src/chembridge/capabilities/: __init__.py  registry.py
src/chembridge/cli/: __init__.py  main.py  render.py
src/chembridge/conversion/: __init__.py  engine.py  preflight.py
src/chembridge/discovery/: __init__.py  engine.py  report.py  sniffer.py
src/chembridge/exporters/: __init__.py  extxyz.py  poscar.py  xyz.py
src/chembridge/parsers/: __init__.py  _common.py  extxyz.py  poscar.py  xyz.py
src/chembridge/recovery/: __init__.py  engine.py  scenarios.py
src/chembridge/schema/: __init__.py  elements.py  models.py  paths.py  presence.py
src/chembridge/sdk/: __init__.py  capabilities.py  plugins.py  results.py
src/chembridge/validation/: __init__.py  engine.py  report.py  rethreshold.py  tolerance.py
src/xtalate/: __init__.py  _time.py  registry.py
src/xtalate/capabilities/: __init__.py  registry.py
src/xtalate/cli/: __init__.py  main.py  render.py
src/xtalate/conversion/: __init__.py  engine.py  parse_recovery.py  preflight.py  report.py
src/xtalate/discovery/: __init__.py  engine.py  report.py  sniffer.py
src/xtalate/exporters/: __init__.py  _common.py  ase_traj.py  cif.py  extxyz.py  poscar.py  xdatcar.py  xyz.py
src/xtalate/parsers/: __init__.py  _common.py  ase_traj.py  extxyz.py  poscar.py  xdatcar.py  xyz.py
src/xtalate/recovery/: __init__.py  engine.py  scenarios.py
src/xtalate/schema/: __init__.py  arrays.py  cell.py  elements.py  models.py  paths.py  presence.py
src/xtalate/sdk/: __init__.py  capabilities.py  plugins.py  results.py  streaming.py
src/xtalate/validation/: __init__.py  _shared.py  engine.py  report.py  rethreshold.py  streaming.py  tolerance.py
tests/: _dummy_plugins.py  _fake_entry_points.py  _format_helpers.py  _invariants.py  conftest.py  test_entry_point_discovery.py  test_smoke.py  test_toyfmt_plugin.py  test_version.py
tests/backend/: conftest.py  test_anonymous_ownership_boundary.py  test_capabilities.py  test_conversions.py  test_downloads.py  test_errors.py  test_health.py  test_job_lifecycle.py  test_jobs_api.py  test_lifecycle.py  test_limits.py  test_limits_auth.py  test_openapi_artifact.py  test_readiness.py  test_uploads.py
tests/backend/db/: conftest.py  test_migrations.py  test_reports_outlive_bytes.py  test_repository_parity.py
tests/capabilities/: test_registry.py  test_velocity_mass_rows.py
tests/cli/: _worked_example.py  test_cli.py  test_plugin_failures.py  test_streaming_convert.py  test_worked_example.py
tests/conversion/: test_engine.py  test_frame_reduction_completeness.py  test_occupancy_warning.py  test_parse_recovery.py  test_partial_lattice_fabrication.py  test_preflight.py  test_velocity_recovery.py  test_xdatcar_truncate_recovery.py
tests/discovery/: test_engine.py  test_sniffer.py
tests/exporters/: __init__.py  test_cif.py  test_poscar.py  test_xdatcar.py
tests/fixtures/xtalate_toyfmt/: pyproject.toml
tests/fixtures/xtalate_toyfmt/src/xtalate_toyfmt/: __init__.py  exporter.py  parser.py
tests/golden/: ATTRIBUTIONS.md  _governance.py  test_ase_traj_golden.py  test_cif_golden.py  test_corpus_governance.py  test_xdatcar_golden.py
tests/integration/: test_compose_lifecycle.py
tests/parsers/: __init__.py  test_ase_traj.py  test_ase_traj_smoke.py  test_builtins_registration.py  test_cif.py  test_cif_symmetry.py  test_extxyz.py  test_poscar.py  test_xdatcar.py  test_xyz.py
tests/property/: _generators.py  _properties.py  _strategies.py  test_fabricative_recovery_completeness.py  test_report_completeness.py  test_report_completeness_hypothesis.py
tests/recovery/: test_engine.py  test_missing_masses.py  test_missing_velocities.py  test_physics_maxwell_boltzmann.py  test_scenarios.py
tests/roundtrip/: __init__.py  _compare.py  _matrix.py  test_identity.py  test_matrix_enumeration.py  test_three_hop.py  test_two_hop.py
tests/schema/: test_arrays.py  test_golden_roundtrip.py  test_models.py  test_paths.py  test_presence.py
tests/sdk/: test_contracts.py
tests/streaming/: _generators.py  _mem_probe.py  test_streaming_conversion.py  test_streaming_frame_selection.py  test_streaming_memory.py  test_streaming_parse_export.py  test_streaming_presence.py  test_streaming_sdk.py  test_streaming_validation.py
tests/validation/: test_engine.py  test_rethreshold.py  test_tolerance.py
tests/wild/: __init__.py  _fetch_cod.py  _wild.py  test_wild_corpus.py
(+79 files in other folders)
