[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chembridge"
version = "0.1.0.dev0"
description = "The trusted translation layer between computational chemistry file formats — a converter that tells you exactly what it kept, what it lost, and why."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "jsong1218" }]
keywords = [
    "chemistry",
    "computational-chemistry",
    "materials-science",
    "file-conversion",
    "vasp",
    "xyz",
    "ase",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
# Core runtime dependencies. pydantic + numpy are needed from M1 (the canonical
# schema). ASE — the sole scientific-I/O dependency (DECISIONS.md D7) — is added
# when the extXYZ parser lands (M3c), to keep the early dependency surface small.
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "ase>=3.29,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[project.scripts]
chembridge = "chembridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chembridge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Decoupled from the 3.11 runtime floor (DECISIONS.md D2): numpy>=2.5 ships type stubs
# using PEP 695 `type` statements, which mypy rejects when targeting 3.11. Our code's
# 3.11 compatibility is enforced instead by ruff `target-version = "py311"` plus the real
# 3.11 test leg in CI — this setting only governs which stub syntax mypy will parse.
python_version = "3.12"
strict = true
files = ["src", "tests"]

# ASE ships a py.typed marker but is largely unannotated (DECISIONS.md D7 wraps it as the
# sole scientific-I/O dependency, M3c). Under --strict its unannotated functions would trip
# `no-untyped-call` at every call site. We treat it as an untyped I/O workhorse confined to
# the two extxyz wrapper modules — `follow_imports = "skip"` makes ASE symbols `Any` — and
# rely on our laundering + golden tests, not ASE's types, to pin its behavior.
[[tool.mypy.overrides]]
module = "ase.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Import-graph enforcement of the acyclic dependency direction (P2) — the "CI
# teeth behind P2" of MASTER_SPEC Part 8 §1.1, encoding the graph of Part 1 §5.1.
# Layers are listed highest → lowest; a higher layer may import a lower one, never
# the reverse. Pipe-separated names on one line are independent siblings that may
# not import each other. This contract is trivially satisfied while packages are
# stubs and gains teeth as code lands.
[tool.importlinter]
root_package = "chembridge"

[[tool.importlinter.contracts]]
name = "Acyclic dependency direction (P2, Part 1 §5.1)"
type = "layers"
layers = [
    "chembridge.cli",
    "chembridge.conversion",
    "chembridge.recovery | chembridge.validation",
    "chembridge.discovery",
    "chembridge.capabilities | chembridge.parsers | chembridge.exporters",
    "chembridge.sdk",
    "chembridge.schema",
]
