[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xtalate"
version = "0.3.0"
description = "The trusted translation layer between computational chemistry file formats — a converter that tells you exactly what it kept, what it lost, and why."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "jsong1218" }]
keywords = [
    "chemistry",
    "computational-chemistry",
    "materials-science",
    "file-conversion",
    "vasp",
    "xyz",
    "ase",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
# Core runtime dependencies. pydantic + numpy are needed from M1 (the canonical
# schema). ASE — the sole scientific-I/O dependency (DECISIONS.md D7) — is added
# when the extXYZ parser lands (M3c), to keep the early dependency surface small.
# PyYAML lands with M9 (DECISIONS.md D48): the config language for custom tolerance-table
# files (--tolerance-profile FILE) and the golden-corpus manifests M11 governs — the repo's
# existing config format, so one parser serves both rather than two config languages.
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "ase>=3.29,<4",
    "pyyaml>=6",
]

[project.optional-dependencies]
# hypothesis is a *test-only* dependency (M10 stage 2, DECISIONS.md D50): property-based
# generation of randomized Canonical Objects with shrinking. It ships no runtime code — the
# minimal-dependency posture (D4/D7) applies to `[project].dependencies`, not the dev extras.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "types-PyYAML>=6",
    "hypothesis>=6.100",
    # pip-audit runs the nightly dependency vulnerability audit (M15C; Part 8 §5). Nightly-only
    # and non-blocking — a new advisory against a pinned dep surfaces in the scheduled run, it
    # never gates a PR. Dev-extra, so it ships no runtime code (the D4/D7 posture is unchanged).
    "pip-audit>=2.7",
]

[project.scripts]
xtalate = "xtalate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xtalate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Decoupled from the 3.11 runtime floor (DECISIONS.md D2): numpy>=2.5 ships type stubs
# using PEP 695 `type` statements, which mypy rejects when targeting 3.11. Our code's
# 3.11 compatibility is enforced instead by ruff `target-version = "py311"` plus the real
# 3.11 test leg in CI — this setting only governs which stub syntax mypy will parse.
# NOTE: numpy 2.5 requires Python >=3.12, so the CI legs necessarily type-check against
# different numpy stub generations (2.5 on 3.13, 2.4 on 3.11). The 3.11 leg is the stricter
# guard; type-check numpy-typed code against the oldest supported numpy before pushing
# (DECISIONS.md D2 addendum). numpy is intentionally left uncapped (D4) — no pin can unify
# the stubs without either breaking 3.11 or upper-capping a foundational dependency.
python_version = "3.12"
strict = true
files = ["src", "tests"]
# The M16B entry-point discovery fixture (tests/fixtures/xtalate_toyfmt) is an independently
# packaged distribution with its own src/ root. It is installed — and thus importable — only
# right before pytest, never when mypy runs, and its package root sits off the module search
# path; type-checking it from the parent gate is neither reliable nor meaningful. Exclude it here
# (ruff still lints it, and it ships its own py.typed so it type-checks cleanly on its own terms).
exclude = ['^tests/fixtures/']

# ASE ships a py.typed marker but is largely unannotated (DECISIONS.md D7 wraps it as the
# sole scientific-I/O dependency, M3c). Under --strict its unannotated functions would trip
# `no-untyped-call` at every call site. We treat it as an untyped I/O workhorse confined to
# the two extxyz wrapper modules — `follow_imports = "skip"` makes ASE symbols `Any` — and
# rely on our laundering + golden tests, not ASE's types, to pin its behavior.
[[tool.mypy.overrides]]
module = "ase.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage as a promoted PR gate (v0.2 M11; MASTER_SPEC Part 8 §5 / Part 10 §1 deferral
# table "earliest v0.2"). The threshold is a **ratchet, not an aspiration**: set at the
# current measured branch coverage (~92.6%) minus a small slack, so it catches a real
# regression without flapping on the sub-percent noise the hypothesis property suite
# introduces run-to-run. Raise it as coverage rises; never lower it to make a red PR green —
# that inverts the gate. --cov-fail-under fails the run below the floor.
addopts = "--cov=xtalate --cov-report=term-missing --cov-fail-under=91"
# The PR-vs-nightly split (M15B; Part 8 §2.4). `nightly`-marked items (the full n×n two-hop matrix
# beyond the curated high-risk subset) are deselected by tests/conftest.py unless
# XTALATE_FULL_MATRIX=1 un-gates them — the fast PR gate vs the exhaustive nightly run. Registered
# here so an unknown-marker warning never masks a typo.
markers = [
    "nightly: only runs in the nightly workflow (un-gated by XTALATE_FULL_MATRIX=1); PR runs deselect it",
]

[tool.coverage.run]
branch = true
source = ["xtalate"]

# Import-graph enforcement of the acyclic dependency direction (P2) — the "CI
# teeth behind P2" of MASTER_SPEC Part 8 §1.1, encoding the graph of Part 1 §5.1.
# Layers are listed highest → lowest; a higher layer may import a lower one, never
# the reverse. Pipe-separated names on one line are independent siblings that may
# not import each other. This contract is trivially satisfied while packages are
# stubs and gains teeth as code lands.
[tool.importlinter]
root_package = "xtalate"

[[tool.importlinter.contracts]]
name = "Acyclic dependency direction (P2, Part 1 §5.1)"
type = "layers"
layers = [
    "xtalate.cli",
    "xtalate.conversion",
    "xtalate.recovery | xtalate.validation",
    "xtalate.discovery",
    "xtalate.capabilities | xtalate.parsers | xtalate.exporters",
    "xtalate.sdk",
    "xtalate.schema",
]
