[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xtalate"
version = "0.4.0"
description = "The trusted translation layer between computational chemistry file formats — a converter that tells you exactly what it kept, what it lost, and why."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "jsong1218" }]
keywords = [
    "chemistry",
    "computational-chemistry",
    "materials-science",
    "file-conversion",
    "vasp",
    "xyz",
    "ase",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
# Core runtime dependencies. pydantic + numpy are needed from M1 (the canonical
# schema). ASE — the sole scientific-I/O dependency (DECISIONS.md D7) — is added
# when the extXYZ parser lands (M3c), to keep the early dependency surface small.
# PyYAML lands with M9 (DECISIONS.md D48): the config language for custom tolerance-table
# files (--tolerance-profile FILE) and the golden-corpus manifests M11 governs — the repo's
# existing config format, so one parser serves both rather than two config languages.
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "ase>=3.29,<4",
    "pyyaml>=6",
]

[project.optional-dependencies]
# The Service layer (v0.5, MASTER_SPEC Part 6). Kept OUT of `[project].dependencies` on purpose:
# `pip install xtalate` stays the pure library + CLI (Tier 0), and a parser bug fix must never
# require FastAPI (Part 9 §1.1). A deployment installs `xtalate[service]`. pydantic-settings is
# the environment-only config reader (Part 9 §2); uvicorn is the ASGI server the image runs.
# (DECISIONS.md D79.)
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    # boto3 backs the S3-compatible object store (MinIO in Tier 1, any S3 in production; D80).
    # Confined to backend/storage/s3.py; the filesystem backend needs nothing.
    "boto3>=1.34",
    # SQLAlchemy 2.0 ORM + Alembic migrations, with psycopg (v3) as the PostgreSQL driver (D81).
    # SQLite (stdlib) is the Tier 0 backend and needs no driver dependency.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # RQ on Redis is the job queue (D82): the API's ``rq`` backend enqueues, ``backend.worker``
    # executes. Tier 0's ``inline`` backend needs neither — it runs jobs in-process (M22).
    "rq>=1.16",
    "redis>=5.0",
    # python-multipart backs FastAPI's multipart/form-data parsing (the file upload, Part 6 §2).
    "python-multipart>=0.0.9",
]
# hypothesis is a *test-only* dependency (M10 stage 2, DECISIONS.md D50): property-based
# generation of randomized Canonical Objects with shrinking. It ships no runtime code — the
# minimal-dependency posture (D4/D7) applies to `[project].dependencies`, not the dev extras.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "types-PyYAML>=6",
    "hypothesis>=6.100",
    # The service dependencies are pulled into `dev` so the one existing CI gate (which installs
    # `.[dev]`) type-checks and tests `backend/` from M21 — the backend suite runs beside the
    # library suite, gaining CI teeth a version before M25 formalizes the compose integration job.
    # httpx backs Starlette's TestClient (the backend tests' HTTP transport).
    # KNOWN DEPRECATION (deferred, M22): Starlette 1.3 emits a StarletteDeprecationWarning at
    # TestClient import — "Using `httpx` with `starlette.testclient` is deprecated; install
    # `httpx2` instead." It is cosmetic (no `filterwarnings=error`, so the gate stays green) and
    # third-party. We are NOT swapping the whole test transport to the `httpx2` fork to chase a
    # one-line warning this early. Revisit when a FastAPI/Starlette upgrade makes `httpx2` the
    # standard path or the warning turns into a failure; the minimal interim move is a scoped
    # `filterwarnings` ignore, deliberately not added so the signal stays visible.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "rq>=1.16",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # fakeredis backs the RQ-queue tests with an in-memory Redis, so the job-queue suite runs in the
    # ordinary CI gate without a Redis server (the "skip when the service is absent" pattern's
    # in-process cousin — here the fake stands in so the test always runs).
    "fakeredis>=2.20",
    # pip-audit runs the nightly dependency vulnerability audit (M15C; Part 8 §5). Nightly-only
    # and non-blocking — a new advisory against a pinned dep surfaces in the scheduled run, it
    # never gates a PR. Dev-extra, so it ships no runtime code (the D4/D7 posture is unchanged).
    "pip-audit>=2.7",
]

[project.scripts]
xtalate = "xtalate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xtalate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "backend"]
# Ruff governs Python *source*, never prose. From 0.16 the formatter also reformats fenced Python
# blocks inside Markdown, which would silently rewrite the published docs (`README.md`,
# `docs/API.md`) — collapsing the hand-aligned trailing comments that make those samples readable,
# and doing it as a side effect of a tool upgrade rather than an editorial decision. Excluding
# Markdown keeps `ruff format --check .` deterministic across ruff versions and leaves the docs'
# wording and layout to the human who wrote them.
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's dependency-injection idiom puts `Depends(...)`/`Query(...)` calls in parameter
# defaults; flake8-bugbear's B008 (function call in default argument) is a false positive for
# these framework sentinels, so they are declared immutable (the FastAPI-recommended settling).
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
]

# `backend` lives at the repo root (not under a `src` entry), so isort would otherwise file it as
# third-party and interleave it with FastAPI. Name both first-party packages explicitly so import
# groups stay: stdlib, third-party, then (xtalate | backend).
[tool.ruff.lint.isort]
known-first-party = ["xtalate", "backend"]

[tool.mypy]
# Decoupled from the 3.11 runtime floor (DECISIONS.md D2): numpy>=2.5 ships type stubs
# using PEP 695 `type` statements, which mypy rejects when targeting 3.11. Our code's
# 3.11 compatibility is enforced instead by ruff `target-version = "py311"` plus the real
# 3.11 test leg in CI — this setting only governs which stub syntax mypy will parse.
# NOTE: numpy 2.5 requires Python >=3.12, so the CI legs necessarily type-check against
# different numpy stub generations (2.5 on 3.13, 2.4 on 3.11). The 3.11 leg is the stricter
# guard; type-check numpy-typed code against the oldest supported numpy before pushing
# (DECISIONS.md D2 addendum). numpy is intentionally left uncapped (D4) — no pin can unify
# the stubs without either breaking 3.11 or upper-capping a foundational dependency.
python_version = "3.12"
strict = true
files = ["src", "tests", "backend"]
# The M16B entry-point discovery fixture (tests/fixtures/xtalate_toyfmt) is an independently
# packaged distribution with its own src/ root. It is installed — and thus importable — only
# right before pytest, never when mypy runs, and its package root sits off the module search
# path; type-checking it from the parent gate is neither reliable nor meaningful. Exclude it here
# (ruff still lints it, and it ships its own py.typed so it type-checks cleanly on its own terms).
exclude = ['^tests/fixtures/']

# ASE ships a py.typed marker but is largely unannotated (DECISIONS.md D7 wraps it as the
# sole scientific-I/O dependency, M3c). Under --strict its unannotated functions would trip
# `no-untyped-call` at every call site. We treat it as an untyped I/O workhorse confined to
# the two extxyz wrapper modules — `follow_imports = "skip"` makes ASE symbols `Any` — and
# rely on our laundering + golden tests, not ASE's types, to pin its behavior.
[[tool.mypy.overrides]]
module = "ase.*"
ignore_missing_imports = true
follow_imports = "skip"

# boto3/botocore ship no usable type information (like ASE, D7). The S3 object store confines them
# to backend/storage/s3.py and converts their return values to concrete types at the boundary, so
# `Any` never escapes that module; here we simply let the untyped import resolve under --strict.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage as a promoted PR gate (v0.2 M11; MASTER_SPEC Part 8 §5 / Part 10 §1 deferral
# table "earliest v0.2"). The threshold is a **ratchet, not an aspiration**: set at the
# current measured branch coverage (~92.6%) minus a small slack, so it catches a real
# regression without flapping on the sub-percent noise the hypothesis property suite
# introduces run-to-run. Raise it as coverage rises; never lower it to make a red PR green —
# that inverts the gate. --cov-fail-under fails the run below the floor.
addopts = "--cov=xtalate --cov-report=term-missing --cov-fail-under=91"
# The PR-vs-nightly split (M15B; Part 8 §2.4). `nightly`-marked items (the full n×n two-hop matrix
# beyond the curated high-risk subset) are deselected by tests/conftest.py unless
# XTALATE_FULL_MATRIX=1 un-gates them — the fast PR gate vs the exhaustive nightly run. Registered
# here so an unknown-marker warning never masks a typo.
markers = [
    "nightly: only runs in the nightly workflow (un-gated by XTALATE_FULL_MATRIX=1); PR runs deselect it",
    "integration: drives a live compose stack over HTTP; skipped unless XTALATE_LIVE_BASE_URL is set (M25 CI job)",
]

[tool.coverage.run]
branch = true
source = ["xtalate"]

# Import-graph enforcement of the acyclic dependency direction (P2) — the "CI
# teeth behind P2" of MASTER_SPEC Part 8 §1.1, encoding the graph of Part 1 §5.1.
# Layers are listed highest → lowest; a higher layer may import a lower one, never
# the reverse. Pipe-separated names on one line are independent siblings that may
# not import each other. This contract is trivially satisfied while packages are
# stubs and gains teeth as code lands.
# The two root-level modules extend the Part 1 §5.1 graph (post-v0.3 review):
# `registry` is the composition root that wires parsers/exporters into a Registry
# (only `cli` sits above it), and `_time` is the dependency-free leaf any layer
# may use — listing them means a future P2 inversion through either is caught.
[tool.importlinter]
# Two root packages from v0.5 M21: the library and the service. `backend` sits above `xtalate`
# and imports it freely; the reverse is forbidden by the contract below, encoding Part 1 §2 (the
# API is a presenter over the library — nothing in the library may import the service).
root_packages = ["xtalate", "backend"]

# The service depends on the library, never the reverse (v0.5 M21; Part 1 §2). Stated as a
# `forbidden` contract rather than a layer of the graph above because `backend` is a separate root
# package, not an `xtalate` subpackage — the rule is simply that no library module may import the
# presenter. `lint-imports` fails the moment a stray `import backend` appears anywhere under `src/`.
[[tool.importlinter.contracts]]
name = "Library never imports the service (v0.5 M21, Part 1 §2)"
type = "forbidden"
source_modules = ["xtalate"]
forbidden_modules = ["backend"]

[[tool.importlinter.contracts]]
name = "Acyclic dependency direction (P2, Part 1 §5.1)"
type = "layers"
layers = [
    "xtalate.cli",
    "xtalate.registry",
    "xtalate.conversion",
    "xtalate.recovery | xtalate.validation",
    "xtalate.discovery",
    "xtalate.capabilities | xtalate.parsers | xtalate.exporters",
    "xtalate.sdk",
    "xtalate.schema",
    "xtalate._time",
]

# The CIF parser is the one format built as a package rather than a module (DECISIONS.md D65),
# and its four stages only stay replaceable if the flow through them stays one-way. The outer
# contract treats `xtalate.parsers` as a single layer, so without this the stage ordering would
# be a convention rather than a checked fact — cheap to add while the modules are small.
[[tool.importlinter.contracts]]
name = "CIF reader stage ordering (D65)"
type = "layers"
#
# `_symmetry` (M18) is not a fifth stage: it is stage 3's operation-string reader, given its own
# layer only so the direction is checked. It sits below `_validate`, which consumes it, and
# above `_document`, which must never grow a dependency on symmetry semantics — the document
# layer's whole value is that it is gemmi-shaped and knows nothing of what the tags mean.
layers = [
    "xtalate.parsers.cif._plugin",
    "xtalate.parsers.cif._build",
    "xtalate.parsers.cif._validate",
    "xtalate.parsers.cif._symmetry",
    "xtalate.parsers.cif._document",
    "xtalate.parsers.cif._lexer",
]

# Stage 3 is defined by what it is *not* allowed to know: anything requiring the Canonical
# Model belongs to stage 4. Stated as a contract because the boundary is otherwise invisible —
# validation and construction entangle naturally, and one convenient import would erase it.
[[tool.importlinter.contracts]]
name = "CIF syntax stages know nothing of the Canonical Model (D65)"
type = "forbidden"
source_modules = [
    "xtalate.parsers.cif._lexer",
    "xtalate.parsers.cif._document",
    "xtalate.parsers.cif._validate",
    "xtalate.parsers.cif._symmetry",
]
forbidden_modules = ["xtalate.schema"]
# Direct imports only. These stages legitimately import `sdk` for the ParseError/ParseIssue
# error contract, and `sdk` reaches `schema` on its own — forbidding that chain would forbid
# reporting errors at all. What must not happen is a stage reaching for a canonical *model*.
allow_indirect_imports = true
